ingress/ingress-sample.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8win.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /windows
        backend: 
          serviceName: aspnet
          servicePort: 80
